[package]
name = "webauthn-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "webauthn_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "webauthn-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
base64 = "0.21"
sha2 = "0.10"
log = "0.4"
lazy_static = "1.4"
rand = "0.8"
p256 = "0.11"
ed25519-dalek = "2"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
console_log = "0.2"
signature = "2.2" # Ajout pour harmoniser
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dependencies.actix-web]
version = "4"
optional = true

[dependencies.actix-cors]
version = "0.6"
optional = true

[dependencies.env_logger]
version = "0.9"
optional = true

[features]
default = []
server = ["actix-web", "actix-cors", "env_logger"]
